challenge 2 mas bonus

--- a/module-2/lab-two-sample-hypothesis-tests/your-code/main.ipynb
+++ b/module-2/lab-two-sample-hypothesis-tests/your-code/main.ipynb
@@ -640,12 +640,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8.570151739679279e-06"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "ttest_rel(pokemon[\"Attack\"],pokemon['Defense']).pvalue/2"
    ]
   },
   {
@@ -656,13 +667,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Your conclusions here:\n",
-    "\n"
+    "### Your conclusions here:\n",
+    "#### We cannot reject the null hypothesis as the result is much smaller than 0.05\n"
    ]
   },
   {
@@ -674,12 +683,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.1966842998774061"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "ttest_rel(pokemon[\"Sp. Atk\"],pokemon['Sp. Def']).pvalue/2"
    ]
   },
   {
@@ -690,13 +710,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 14,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Your conclusions here:\n",
-    "\n"
+    "### Your conclusions here:\n",
+    "#### We can reject the null hypothesis as the result is higher than 0.05\n"
    ]
   },
   {
@@ -710,13 +728,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_1sampResult(statistic=-4.325566393330478, pvalue=1.7140303479358558e-05)"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "    \n",
-    "    "
+    "ttest_1samp(pokemon[\"Defense\"]-pokemon[\"Attack\"], 0)"
    ]
   },
   {
@@ -732,12 +760,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 90,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Type 1</th>\n",
+       "      <th>False</th>\n",
+       "      <th>True</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Legendary</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>False</th>\n",
+       "      <td>627</td>\n",
+       "      <td>108</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>True</th>\n",
+       "      <td>61</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Type 1     False  True \n",
+       "Legendary              \n",
+       "False        627    108\n",
+       "True          61      4"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "leg_water = pd.crosstab(pokemon[\"Legendary\"], pokemon[\"Type 1\"]==\"Water\")\n",
+    "leg_water"
    ]
   },
   {
@@ -749,12 +835,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 91,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3.617455159932616, 0.0571762700873503, 1, array([[632.1, 102.9],\n",
+       "        [ 55.9,   9.1]]))"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "chi2_contingency(leg_water, correction=False)\n"
    ]
   },
   {
