--- a/module-2/lab-two-sample-hypothesis-tests/your-code/main.ipynb
+++ b/module-2/lab-two-sample-hypothesis-tests/your-code/main.ipynb
@@ -17,7 +17,8 @@
    "outputs": [],
    "source": [
     "# import numpy and pandas\n",
-    "\n"
+    "import numpy as np\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -33,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,12 +52,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>#</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Type 1</th>\n",
+       "      <th>Type 2</th>\n",
+       "      <th>Total</th>\n",
+       "      <th>HP</th>\n",
+       "      <th>Attack</th>\n",
+       "      <th>Defense</th>\n",
+       "      <th>Sp. Atk</th>\n",
+       "      <th>Sp. Def</th>\n",
+       "      <th>Speed</th>\n",
+       "      <th>Generation</th>\n",
+       "      <th>Legendary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Bulbasaur</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>318</td>\n",
+       "      <td>45</td>\n",
+       "      <td>49</td>\n",
+       "      <td>49</td>\n",
+       "      <td>65</td>\n",
+       "      <td>65</td>\n",
+       "      <td>45</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Ivysaur</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>405</td>\n",
+       "      <td>60</td>\n",
+       "      <td>62</td>\n",
+       "      <td>63</td>\n",
+       "      <td>80</td>\n",
+       "      <td>80</td>\n",
+       "      <td>60</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Venusaur</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>525</td>\n",
+       "      <td>80</td>\n",
+       "      <td>82</td>\n",
+       "      <td>83</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>80</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>VenusaurMega Venusaur</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>625</td>\n",
+       "      <td>80</td>\n",
+       "      <td>100</td>\n",
+       "      <td>123</td>\n",
+       "      <td>122</td>\n",
+       "      <td>120</td>\n",
+       "      <td>80</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Charmander</td>\n",
+       "      <td>Fire</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>309</td>\n",
+       "      <td>39</td>\n",
+       "      <td>52</td>\n",
+       "      <td>43</td>\n",
+       "      <td>60</td>\n",
+       "      <td>50</td>\n",
+       "      <td>65</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   #                   Name Type 1  Type 2  Total  HP  Attack  Defense  \\\n",
+       "0  1              Bulbasaur  Grass  Poison    318  45      49       49   \n",
+       "1  2                Ivysaur  Grass  Poison    405  60      62       63   \n",
+       "2  3               Venusaur  Grass  Poison    525  80      82       83   \n",
+       "3  3  VenusaurMega Venusaur  Grass  Poison    625  80     100      123   \n",
+       "4  4             Charmander   Fire     NaN    309  39      52       43   \n",
+       "\n",
+       "   Sp. Atk  Sp. Def  Speed  Generation  Legendary  \n",
+       "0       65       65     45           1      False  \n",
+       "1       80       80     60           1      False  \n",
+       "2      100      100     80           1      False  \n",
+       "3      122      120     80           1      False  \n",
+       "4       60       50     65           1      False  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "pokemon.head()"
    ]
   },
   {
@@ -68,12 +212,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False    735\n",
+       "True      65\n",
+       "Name: Legendary, dtype: int64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "pokemon[\"Legendary\"].value_counts()"
    ]
   },
   {
@@ -85,12 +243,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Legendary:\n",
+      "mean    637.384615\n",
+      "std      60.937389\n",
+      "Name: Total, dtype: float64\n",
+      "Non legendary:\n",
+      "mean    417.213605\n",
+      "std     106.760417\n",
+      "Name: Total, dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "p_legendary = pokemon[pokemon[\"Legendary\"]==True][\"Total\"].describe()[[\"mean\",\"std\"]]\n",
+    "p_non_legendary = pokemon[pokemon[\"Legendary\"]==False][\"Total\"].describe()[[\"mean\",\"std\"]]\n",
+    "\n",
+    "print(f\"Legendary:\\n{p_legendary}\\nNon legendary:\\n{p_non_legendary}\")"
    ]
   },
   {
@@ -104,12 +281,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'HP': 1.0026911708035284e-13,\n",
+       " 'Attack': 2.520372449236646e-16,\n",
+       " 'Defense': 4.8269984949193316e-11,\n",
+       " 'Sp. Atk': 1.5514614112239812e-21,\n",
+       " 'Sp. Def': 2.2949327864052826e-15,\n",
+       " 'Speed': 1.049016311882451e-18,\n",
+       " 'Total': 9.357954335957446e-47}"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "from scipy.stats import ttest_ind\n",
+    "def t_test_features(s1, s2, features=['HP', 'Attack', 'Defense', 'Sp. Atk', 'Sp. Def', 'Speed', 'Total'], equal_var = False):\n",
+    "    results = {}\n",
+    "    for f in features:\n",
+    "        results[f]= ttest_ind(s1[f],s2[f], equal_var = equal_var).pvalue\n",
+    "    return results\n",
+    "\n",
+    "t_test_features(pokemon[pokemon[\"Legendary\"]==True],pokemon[pokemon[\"Legendary\"]==False])"
    ]
   },
   {
@@ -125,8 +326,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your conclusions here:\n",
-    "\n"
+    "# Los pvalue están muy por debajo de 0.05, por lo que las medias de los stats de ambas muestras difieren mucho"
    ]
   },
   {
@@ -138,12 +338,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Water       112\n",
+       "Normal       98\n",
+       "Grass        70\n",
+       "Bug          69\n",
+       "Psychic      57\n",
+       "Fire         52\n",
+       "Rock         44\n",
+       "Electric     44\n",
+       "Dragon       32\n",
+       "Ground       32\n",
+       "Ghost        32\n",
+       "Dark         31\n",
+       "Poison       28\n",
+       "Steel        27\n",
+       "Fighting     27\n",
+       "Ice          24\n",
+       "Fairy        17\n",
+       "Flying        4\n",
+       "Name: Type 1, dtype: int64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "pokemon[\"Type 1\"].value_counts()"
    ]
   },
   {
@@ -155,12 +385,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Legendary:\n",
+      "                  mean         std\n",
+      "#           303.089286  188.440807\n",
+      "Total       430.455357  113.188266\n",
+      "HP           72.062500   27.487026\n",
+      "Attack       74.151786   28.377192\n",
+      "Defense      72.946429   27.773809\n",
+      "Sp. Atk      74.812500   29.030128\n",
+      "Sp. Def      70.517857   28.460493\n",
+      "Speed        65.964286   23.019353\n",
+      "Generation    2.857143    1.558800\n",
+      "Non legendary:\n",
+      "                  mean         std\n",
+      "#           372.536337  209.928799\n",
+      "Total       435.859012  121.091682\n",
+      "HP           68.802326   25.194299\n",
+      "Attack       79.790698   33.025152\n",
+      "Defense      73.988372   31.719933\n",
+      "Sp. Atk      72.495640   33.292537\n",
+      "Sp. Def      72.127907   27.739292\n",
+      "Speed        68.654070   29.925907\n",
+      "Generation    3.399709    1.666119\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "p_water = pokemon[pokemon[\"Type 1\"]==\"Water\"].describe().T[[\"mean\",\"std\"]]\n",
+    "p_non_water = pokemon[pokemon[\"Type 1\"]!=\"Water\"].describe().T[[\"mean\",\"std\"]]\n",
+    "\n",
+    "print(f\"Legendary:\\n{p_water}\\nNon legendary:\\n{p_non_water}\")"
    ]
   },
   {
@@ -172,12 +435,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'HP': 0.21039123413951366,\n",
+       " 'Attack': 0.08819179395287975,\n",
+       " 'Defense': 0.7431911498657908,\n",
+       " 'Sp. Atk': 0.48746918813293183,\n",
+       " 'Sp. Def': 0.5704888087054404,\n",
+       " 'Speed': 0.3639982878124878,\n",
+       " 'Total': 0.6587140317488793}"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "t_test_features(pokemon[pokemon[\"Type 1\"]==\"Water\"],pokemon[pokemon[\"Type 1\"]!=\"Water\"], equal_var = True)"
    ]
   },
   {
@@ -194,7 +475,10 @@
    "outputs": [],
    "source": [
     "# Your conclusions here:\n",
-    "\n"
+    "\n",
+    "# Como los stats tienen un pvalue/2 > 0.05 no podemos rechazar la hipótesis nula (que sean independientes)\n",
+    "# A excepción del ataque que sí cumple que pvalue/2 < 0.05, por lo que sí se rechaza la hipótesis nula y existe\n",
+    "# dependencia entre dicho stats de ambas muestras."
    ]
   },
   {
@@ -208,12 +492,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Attack vs Defense 1.7140303479358558e-05\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "from scipy.stats import ttest_rel\n",
+    "def t_test_stats(s1, s2):\n",
+    "\n",
+    "    return ttest_rel(s1,s2).pvalue\n",
+    "\n",
+    "att_vs_def = t_test_stats(pokemon[\"Attack\"],pokemon[\"Defense\"])\n",
+    "\n",
+    "print(f\"Attack vs Defense {att_vs_def}\")"
    ]
   },
   {
@@ -230,7 +529,9 @@
    "outputs": [],
    "source": [
     "# Your conclusions here:\n",
-    "\n"
+    "\n",
+    "# En este caso, comprendo que la H0 es que existe dependencia entre los valores. Al ser pvalue/2 < 0.05 se rechaza\n",
+    "# esta H0 y podemos afirmar que ambos Ataque y Defensa son independientes.\n"
    ]
   },
   {
@@ -242,12 +543,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sp. Atk vs Sp. Def 0.3933685997548122\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "sp_att_vs_sp_def = t_test_stats(pokemon[\"Sp. Atk\"],pokemon[\"Sp. Def\"])\n",
+    "\n",
+    "print(f\"Sp. Atk vs Sp. Def {sp_att_vs_sp_def}\")\n"
    ]
   },
   {
@@ -264,7 +576,8 @@
    "outputs": [],
    "source": [
     "# Your conclusions here:\n",
-    "\n"
+    "\n",
+    "# En este caso, pvalue/2 > 0.05 por lo que no se puede rechazar que sean dependientes."
    ]
   },
   {
@@ -278,13 +591,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_1sampResult(statistic=4.325566393330478, pvalue=1.7140303479358558e-05)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "    \n",
-    "    "
+    "from scipy.stats import ttest_1samp\n",
+    "\n",
+    "sp_att_vs_sp_def_bis = ttest_1samp(pokemon[\"Attack\"]-pokemon[\"Defense\"],0)\n",
+    "\n",
+    "sp_att_vs_sp_def_bis"
    ]
   },
   {
@@ -300,12 +627,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Type 1</th>\n",
+       "      <th>False</th>\n",
+       "      <th>True</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Legendary</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>False</th>\n",
+       "      <td>627</td>\n",
+       "      <td>108</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>True</th>\n",
+       "      <td>61</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Type 1     False  True \n",
+       "Legendary              \n",
+       "False        627    108\n",
+       "True          61      4"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "pkmn_water[\"Water\"] = pokemon[\"Type 1\"].apply(lambda x: True if x == \"Water\" else False)\n",
+    "contingency_table = pd.crosstab(pokemon[\"Legendary\"],pkmn_water[\"Water\"])\n",
+    "contingency_table"
    ]
   },
   {
@@ -317,12 +703,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2.9429200762850503, 0.08625467249550949, 1, array([[632.1, 102.9],\n",
+       "        [ 55.9,   9.1]]))"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "from scipy.stats import chi2_contingency\n",
+    "\n",
+    "chi2_contingency(contingency_table)"
    ]
   },
   {
@@ -339,7 +739,37 @@
    "outputs": [],
    "source": [
     "# Your answer here:\n",
-    "\n"
+    "\n",
+    "# pvale/2 < 0.05 por lo que se puede rechazar la hipótesis nula por lo que se rechaza que sean independientes (SON\n",
+    "# DEPENDIENTES)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "¿Cómo puede hacer que de 3.61 como sale al hacerlo de manera manual?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3.617455159932616, 0.0571762700873503, 1, array([[632.1, 102.9],\n",
+       "        [ 55.9,   9.1]]))"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chi2_contingency(contingency_table, correction = False)"
    ]
   },
   {
