--- a/module-2/lab-two-sample-hypothesis-tests/your-code/main.ipynb
+++ b/module-2/lab-two-sample-hypothesis-tests/your-code/main.ipynb
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -251,9 +251,10 @@
      "output_type": "stream",
      "text": [
       "Pokemon legendary total points mean:  637.3846153846154\n",
-      "Pokemon non-legendary total points std:  106.76041745713005\n",
+      "Pokemon legendary total points std:  60.93738905315344\n",
+      "                  \n",
       "Pokemon non-legendary total points mean:  417.21360544217686\n",
-      "Pokemon legendary total points std:  60.93738905315344\n"
+      "Pokemon non-legendary total points std:  106.76041745713005\n"
      ]
     }
    ],
@@ -263,10 +264,10 @@
     "no_legendary = pokemon[pokemon[\"Legendary\"] == False]\n",
     "\n",
     "print(\"Pokemon legendary total points mean: \", legendary[\"Total\"].mean())\n",
-    "print(\"Pokemon non-legendary total points std: \", no_legendary[\"Total\"].std())\n",
-    "\"\"\"       ---------           \"\"\"\n",
+    "print(\"Pokemon legendary total points std: \", legendary[\"Total\"].std())\n",
+    "print(\"\"\"                  \"\"\")\n",
     "print(\"Pokemon non-legendary total points mean: \", no_legendary[\"Total\"].mean())\n",
-    "print(\"Pokemon legendary total points std: \", legendary[\"Total\"].std())\n"
+    "print(\"Pokemon non-legendary total points std: \", no_legendary[\"Total\"].std())\n"
    ]
   },
   {
