--- a/module-2/lab-two-sample-hypothesis-tests/your-code/main.ipynb
+++ b/module-2/lab-two-sample-hypothesis-tests/your-code/main.ipynb
@@ -863,13 +863,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 19,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Your answer here:\n",
-    "\n"
+    "### Your answer here:\n",
+    "#### We can reject the null hypothesis as the pvalue is higher tan 0,05, even though it's quite close"
    ]
   },
   {
