corregido el bonus

--- a/module-2/lab-two-sample-hypothesis-tests/your-code/bonus.ipynb
+++ b/module-2/lab-two-sample-hypothesis-tests/your-code/bonus.ipynb
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
        "18"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,9 +264,11 @@
     "unique_types=pd.concat([pokemon[\"Type 1\"], pokemon[\"Type 2\"]]).unique()\n",
     "for i in unique_types:\n",
     "    if type(i)!=float:\n",
-    "        pokemon_totals.append(i)\n",
+    "        type_one=pokemon[pokemon[\"Type 1\"]==i][\"Total\"]\n",
+    "        type_two=pokemon[pokemon[\"Type 2\"]==i][\"Total\"]\n",
+    "        pokemon_totals.append(pd.concat([type_one, type_two]))\n",
     "\n",
-    "len(pokemon_totals) # you should see 18"
+    "len(pokemon_totals) # you should see 18\n"
    ]
   },
   {
