--- a/module-2/lab-two-sample-hypothesis-tests/your-code/main.ipynb
+++ b/module-2/lab-two-sample-hypothesis-tests/your-code/main.ipynb
@@ -640,23 +640,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "8.570151739679279e-06"
+       "1.7140303479358558e-05"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Your code here:\n",
-    "ttest_rel(pokemon[\"Attack\"],pokemon['Defense']).pvalue/2"
+    "ttest_rel(pokemon[\"Attack\"],pokemon['Defense']).pvalue"
    ]
   },
   {
@@ -683,23 +683,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.1966842998774061"
+       "0.3933685997548122"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Your code here:\n",
-    "ttest_rel(pokemon[\"Sp. Atk\"],pokemon['Sp. Def']).pvalue/2"
+    "ttest_rel(pokemon[\"Sp. Atk\"],pokemon['Sp. Def']).pvalue"
    ]
   },
   {
