En último Challenge 1

--- a/module-2/lab-two-sample-hypothesis-tests/your-code/main.ipynb
+++ b/module-2/lab-two-sample-hypothesis-tests/your-code/main.ipynb
@@ -269,12 +269,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_indResult(statistic=25.8335743895517, pvalue=9.357954335957446e-47)"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n",
-    "\n"
+    "from scipy.stats import ttest_ind\n",
+    "\n",
+    "ttest_ind(pokemon[pokemon['Legendary'] == True]['Total'], pokemon[pokemon['Legendary'] == False]['Total'], equal_var=False)\n"
    ]
   },
   {
@@ -290,7 +302,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your conclusions here:\n",
+    "# Legendary Pokemon .........\n",
     "\n"
    ]
   },
@@ -303,12 +315,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Water       112\n",
+       "Normal       98\n",
+       "Grass        70\n",
+       "Bug          69\n",
+       "Psychic      57\n",
+       "Fire         52\n",
+       "Rock         44\n",
+       "Electric     44\n",
+       "Dragon       32\n",
+       "Ground       32\n",
+       "Ghost        32\n",
+       "Dark         31\n",
+       "Poison       28\n",
+       "Fighting     27\n",
+       "Steel        27\n",
+       "Ice          24\n",
+       "Fairy        17\n",
+       "Flying        4\n",
+       "Name: Type 1, dtype: int64"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n",
-    "\n"
+    "pokemon['Type 1'].value_counts()\n"
    ]
   },
   {
@@ -320,12 +360,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The mean of water Pokemon is 430.455 and its standard deviation is 113.188, while the mean of non water Pokemon is 435.859 and its standard deviation is 121.092\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here:\n",
-    "\n"
+    "water_mean = round(pokemon[pokemon['Type 1'] == 'Water']['Total'].mean(),3)\n",
+    "sdw = round(stdev(pokemon[pokemon['Type 1'] == 'Water']['Total']),3)\n",
+    "\n",
+    "non_water_mean = round(pokemon[pokemon['Type 1'] != 'Water']['Total'].mean(),3)\n",
+    "sdnw = round(stdev(pokemon[pokemon['Type 1'] != 'Water']['Total']),3)\n",
+    "\n",
+    "print('The mean of water Pokemon is {} and its standard deviation is {}, while the mean of non water Pokemon is {} and its standard deviation is {}'.format(water_mean, sdw, non_water_mean, sdnw))\n"
    ]
   },
   {
@@ -337,12 +390,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "435.859"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n",
-    "\n"
+    "water_mean\n",
+    "non_water_mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_indResult(statistic=nan, pvalue=nan)"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ttest_ind(water_mean, non_water_mean)"
    ]
   },
   {
