terminado el bonus

--- a/module-2/lab-two-sample-hypothesis-tests/your-code/bonus.ipynb
+++ b/module-2/lab-two-sample-hypothesis-tests/your-code/bonus.ipynb
@@ -286,11 +286,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "F_onewayResult(statistic=6.617538296005535, pvalue=2.6457458815984803e-15)"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "from scipy.stats import f_oneway\n",
+    "f_oneway(*pokemon_totals)"
    ]
   },
   {
@@ -301,13 +314,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Your comment here\n",
+    "#### Total stats are diffent from the pokemon types stats. We can then reject the null hypothesis. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your comment here"
-   ]
+   "source": []
   }
  ],
  "metadata": {
