--- a/module-2/lab-two-sample-hypothesis-tests/your-code/main.ipynb
+++ b/module-2/lab-two-sample-hypothesis-tests/your-code/main.ipynb
@@ -12,13 +12,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "# import numpy and pandas\n",
     "import numpy as np\n",
-    "import pandas as pd\n"
+    "import pandas as pd\n",
+    "from scipy import stats\n"
    ]
   },
   {
@@ -235,6 +236,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "#             470.215385\n",
+       "Total         637.384615\n",
+       "HP             92.738462\n",
+       "Attack        116.676923\n",
+       "Defense        99.661538\n",
+       "Sp. Atk       122.184615\n",
+       "Sp. Def       105.938462\n",
+       "Speed         100.184615\n",
+       "Generation      3.769231\n",
+       "Legendary       1.000000\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = pokemon[pokemon[\"Legendary\"] == True]\n",
+    "x.mean()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -243,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -281,12 +313,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "legend = legendary[\"Total\"]\n",
+    "no_legend = no_legendary[\"Total\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_indResult(statistic=25.8335743895517, pvalue=9.357954335957446e-47)"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "stats.ttest_ind(legend, no_legend, equal_var = 0)\n"
    ]
   },
   {
@@ -298,12 +352,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your conclusions here:\n",
-    "\n"
+    "\n",
+    "# As we can check on the t-test, the p-value is considarably low, therefore, we can  say that both variables are no\n",
+    "# dependats"
    ]
   },
   {
@@ -315,12 +371,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Water       112\n",
+       "Normal       98\n",
+       "Grass        70\n",
+       "Bug          69\n",
+       "Psychic      57\n",
+       "Fire         52\n",
+       "Electric     44\n",
+       "Rock         44\n",
+       "Ground       32\n",
+       "Ghost        32\n",
+       "Dragon       32\n",
+       "Dark         31\n",
+       "Poison       28\n",
+       "Fighting     27\n",
+       "Steel        27\n",
+       "Ice          24\n",
+       "Fairy        17\n",
+       "Flying        4\n",
+       "Name: Type 1, dtype: int64"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "pokemon[\"Type 1\"].value_counts()"
    ]
   },
   {
@@ -332,12 +417,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pokemon type water mean:  #             303.089286\n",
+      "Total         430.455357\n",
+      "HP             72.062500\n",
+      "Attack         74.151786\n",
+      "Defense        72.946429\n",
+      "Sp. Atk        74.812500\n",
+      "Sp. Def        70.517857\n",
+      "Speed          65.964286\n",
+      "Generation      2.857143\n",
+      "Legendary       0.035714\n",
+      "dtype: float64\n",
+      "Pokemon type water std:  #             188.440807\n",
+      "Total         113.188266\n",
+      "HP             27.487026\n",
+      "Attack         28.377192\n",
+      "Defense        27.773809\n",
+      "Sp. Atk        29.030128\n",
+      "Sp. Def        28.460493\n",
+      "Speed          23.019353\n",
+      "Generation      1.558800\n",
+      "Legendary       0.186411\n",
+      "dtype: float64\n",
+      "                  \n",
+      "Pokemon type no-water mean:  #             372.536337\n",
+      "Total         435.859012\n",
+      "HP             68.802326\n",
+      "Attack         79.790698\n",
+      "Defense        73.988372\n",
+      "Sp. Atk        72.495640\n",
+      "Sp. Def        72.127907\n",
+      "Speed          68.654070\n",
+      "Generation      3.399709\n",
+      "Legendary       0.088663\n",
+      "dtype: float64\n",
+      "Pokemon type no-water std:  #             209.928799\n",
+      "Total         121.091682\n",
+      "HP             25.194299\n",
+      "Attack         33.025152\n",
+      "Defense        31.719933\n",
+      "Sp. Atk        33.292537\n",
+      "Sp. Def        27.739292\n",
+      "Speed          29.925907\n",
+      "Generation      1.666119\n",
+      "Legendary       0.284463\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "pokewater = pokemon[pokemon[\"Type 1\"] == \"Water\"]\n",
+    "no_pokewater = pokemon[pokemon[\"Type 1\"] != \"Water\"]\n",
+    "\n",
+    "\n",
+    "print(\"Pokemon type water mean: \", pokewater.mean())\n",
+    "print(\"Pokemon type water std: \", pokewater.std())\n",
+    "print(\"\"\"                  \"\"\")\n",
+    "print(\"Pokemon type no-water mean: \", no_pokewater.mean())\n",
+    "print(\"Pokemon type no-water std: \", no_pokewater.std())"
    ]
   },
   {
