--- a/module-2/lab-two-sample-hypothesis-tests/your-code/bonus.ipynb
+++ b/module-2/lab-two-sample-hypothesis-tests/your-code/bonus.ipynb
@@ -17,11 +17,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from scipy.stats import f_oneway"
    ]
   },
   {
@@ -203,14 +204,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[nan,\n",
+       " 'Psychic',\n",
+       " 'Ground',\n",
+       " 'Poison',\n",
+       " 'Fire',\n",
+       " 'Steel',\n",
+       " 'Dragon',\n",
+       " 'Electric',\n",
+       " 'Bug',\n",
+       " 'Water',\n",
+       " 'Ghost',\n",
+       " 'Flying',\n",
+       " 'Fairy',\n",
+       " 'Ice',\n",
+       " 'Normal',\n",
+       " 'Grass',\n",
+       " 'Rock',\n",
+       " 'Fighting',\n",
+       " 'Dark']"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n",
-    "\n",
-    "\n",
-    "len(unique_types) # you should see 19"
+    "uno=list(pokemon[\"Type 2\"].unique())\n",
+    "dos=list(pokemon[\"Type 1\"].unique())\n",
+    "unique_types=list(set(uno+dos))\n",
+    "unique_types # you should see 19"
    ]
   },
   {
@@ -230,14 +260,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#pokemon[(pokemon[\"Type 1\"]==\"Dragon\") | (pokemon[\"Type 2\"]==\"Dragon\")][\"Total\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "pokemon_totals = []\n",
     "\n",
-    "# Your code here\n",
-    "\n",
+    "for i in unique_types:\n",
+    "    if type(i)!= float:\n",
+    "        ss=pokemon[(pokemon[\"Type 1\"]==i) | (pokemon[\"Type 2\"]==i)][\"Total\"]\n",
+    "        pokemon_totals.append(ss)\n",
+    "    \n",
     "len(pokemon_totals) # you should see 18"
    ]
   },
@@ -256,11 +309,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pokemon_groups' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-40-86c2716f3e1c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mf_oneway\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mpokemon_groups\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'pokemon_groups' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "f_oneway(*pokemon_totals)\n"
    ]
   },
   {
