--- a/module-2/lab-two-sample-hypothesis-tests/your-code/main.ipynb
+++ b/module-2/lab-two-sample-hypothesis-tests/your-code/main.ipynb
@@ -582,12 +582,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 98,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_indResult(statistic=0.4418547448849676, pvalue=0.6587140317488793)"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your conclusions here:\n",
-    "\n"
+    "agua=pokemon[pokemon[\"Type 1\"]==\"Water\"]\n",
+    "no_agua=pokemon[pokemon[\"Type 1\"]!=\"Water\"]\n",
+    "media_agua=agua[\"Total\"]\n",
+    "media_no_agua=no_agua[\"Total\"]\n",
+    "ttest_ind(media_no_agua, media_agua, equal_var=True)\n"
    ]
   },
   {
